2005-12-10  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/identifier.h :
	* lib/identifier.cpp :

	  - Redefined macros in identifier.h. It now has provisions for typed
	    variables.

	  - Added a helper identifier class to validate identifiers.

	  - Entities are now strictly defined as strings that start with a
	    lowercase character and variables are now defined as strings that
	    start with 'S', 'A' or 'O'.

	* lib/fact.cpp :

	  - Use new identifier macros/functions.

	  - Reimplemented verify() functions to take advantage of the new typed
	    variables.

	* lib/mapper.cpp :
	* lib/polbase.cpp :
	* lib/symtab.cpp :

	  - Use new identifier macros/functions.

	* lib/varlist.cpp :
	* lib/varlist.h :

	  - Added a new add() function that validates variables using the new
	    identfier macros/functions before adding into the varlist.

	  - Removed vcopy(), as copy() calls the new add() function, which
	    automatically verifies the variables.

	* main/policy.y :

	  - Use new identifier macros/functions.

	* samples/chwall.vlp :
	* samples/docrel.vlp :

	  - Renamed variables to adhere to the new definition.

	* lib/atom.h :
	* lib/fact.h :

	  - Moved atom structures to atom.h. Also renamed them to vlad_atom_*.

2005-12-09  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/list.h :
	* lib/mapper.h :
	* lib/polbase.h :
	* lib/smwrap.h :
	* lib/symtab.h :

	  - vlad_mem is now inherited via virtual inheritance for
	    disambiguation.

	* lib/stringlistlist.cpp :
	* lib/stringlistlist.h :

	  - Added a class to hold a list of stringlists.

	* lib/stringlist.cpp :
	* lib/stringlist.h :

	  - vlad_stringlist is now also a list_item. This allows us to make
	    a list of stinglists.

2005-12-08  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagged vlad-1_2_0

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - Removed unnecessary calls to encode_fact() in compute_generate().
