@@ -5,7 +5,7 @@ BNF for Policy Definition Parser
 Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 -------------------------------------------------------------------------------
 Started 2002 Dec 08
-Updated 2004 Jan 06
+Updated 2005 Dec 10
 -------------------------------------------------------------------------------
 
 <start>                  : <program>
@@ -14,12 +14,12 @@ Updated 2004 Jan 06
 
 <init>                   : <nil>
 
-<body>                   : <ident-section> <initial-section>
+<body>                   : <entity-section> <initial-section>
                            <constraint-section> <update-section>
 
 <destroy>                : <nil>
 
-<ident-section>          : <nil> | <ident-stmt-list>
+<entity-section>         : <nil> | <entity-stmt-list>
 
 <initial-section>        : <nil> | <inital-stmt-list>
 
@@ -27,7 +27,7 @@ Updated 2004 Jan 06
 
 <update-section>         : <nil> | <update-stmt-list>
 
-<ident-stmt-list>        : <ident-stmt> | <ident-stmt-list> <ident-stmt>
+<entity-stmt-list>       : <entity-stmt> | <entity-stmt-list> <entity-stmt>
 
 <initial-stmt-list>      : <initial-stmt> | <initial-stmt-list> <initial-stmt>
 
@@ -36,35 +36,36 @@ Updated 2004 Jan 06
 
 <update-stmt-list>       : <update-stmt> | <update-stmt-list> <update-stmt>
 
-<ident-stmt>             : <ident> <ident-declaration> <semicolon>
+<entity-stmt>            : <entity> <entity-declaration> <semicolon>
 
-<ident-declaration>      : <sub-ident-decl> | <obj-ident-decl> | acc-ident-decl> |
-                           <sub-grp-ident-decl> | <obj-grp-ident-decl> |
-                           <acc-grp-ident-decl>
+<entity-declaration>     : <sub-entity-decl> | <obj-entity-decl> |
+                           <acc-entity-decl> | <sub-grp-entity-decl> |
+                           <obj-grp-entity-decl> |
+                           <acc-grp-entity-decl>
 
-<sub-ident-decl>         : <sub-type> <sub-ident-list>
+<sub-entity-decl>        : <sub-type> <sub-entity-list>
 
-<acc-ident-decl>         : <acc-type> <acc-ident-list>
+<acc-entity-decl>        : <acc-type> <acc-entity-list>
 
-<obj-ident-decl>         : <obj-type> <obj-ident-list>
+<obj-entity-decl>        : <obj-type> <obj-entity-list>
 
-<sub-grp-ident-decl>     : <sub-grp-type> <sub-grp-ident-list>
+<sub-grp-entity-decl>    : <sub-grp-type> <sub-grp-entity-list>
 
-<acc-grp-ident-decl>     : <acc-grp-type> <acc-grp-ident-list>
+<acc-grp-entity-decl>    : <acc-grp-type> <acc-grp-entity-list>
 
-<obj-grp-ident-decl>     : <obj-grp-type> <obj-grp-ident-list>
+<obj-grp-entity-decl>    : <obj-grp-type> <obj-grp-entity-list>
 
-<sub-ident-list>         : <identifier> | <sub-ident-list> <comma> <identifier>
+<sub-entity-list>        : <identifier> | <sub-entity-list> <comma> <identifier>
 
-<obj-ident-list>         : <identifier> | <obj-ident-list> <comma> <identifier>
+<obj-entity-list>        : <identifier> | <obj-entity-list> <comma> <identifier>
 
-<acc-ident-list>         : <identifier> | <acc-ident-list> <comma> <identifier>
+<acc-entity-list>        : <identifier> | <acc-entity-list> <comma> <identifier>
 
-<sub-grp-ident-list>     : <identifier> | <sub-grp-ident-list> <comma> <identifier>
+<sub-grp-entity-list>    : <identifier> | <sub-grp-entity-list> <comma> <identifier>
 
-<obj-grp-ident-list>     : <identifier> | <obj-grp-ident-list> <comma> <identifier>
+<obj-grp-entity-list>    : <identifier> | <obj-grp-entity-list> <comma> <identifier>
 
-<acc-grp-ident-list>     : <identifier> | <acc-grp-ident-list> <comma> <identifier>
+<acc-grp-entity-list>    : <identifier> | <acc-grp-entity-list> <comma> <identifier>
 
 <initial-stmt>           : <initially> <expression> <semicolon>
 
@@ -105,7 +106,7 @@ Updated 2004 Jan 06
 
 <logical-op>             : <and>
 
-<identifier>             : <alpha> <alphanumstr>{0,127}
+<identifier>             : <alpha> <alphanum> {0,127}
 
 <and>                    : &&
 
@@ -133,7 +134,7 @@ Updated 2004 Jan 06
 
 <if>                     : if
 
-<ident>                  : ident
+<entity>                 : entity
 
 <sub-type>               : sub
 
