@@ -5,22 +5,50 @@ Language Specifications
 Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 -------------------------------------------------------------------------------
 Started 2002 Dec 08
-Updated 2004 Jan 06
+Updated 2005 Dec 10
 -------------------------------------------------------------------------------
 
 1. Expressions
 
   1.1. Identifiers
 
-    Identifiers are case-sensitive, alpha-numeric characters. The first
-    character of an identifier must be an alpha character followed by
-    zero to 127 characters of alpha, digit or underscore characters.
-    Identifiers may be used to identify subject, access-right and object
-    entities or groups, policy updates or variables.
+    Identifiers are case-sensitive, alpha-numeric characters. 
 
-      [a-zA-Z][a-zA-Z0-9_]{0,127}
+    1.1.1 Entity Identifiers
 
-    See Definition section for information on how to delcare identifiers.
+      These are subjects, access rights, objects or groups. The first character
+      of an entity identifier must be a lowercase character followed by 0 to
+      127 characters of alpha, digit or underscore characters. The regular
+      expression is as follows:
+
+      [a-z][a-zA-Z0-9_]{0,127}
+
+    1.1.2 Policy Update Identifiers
+
+      Policy Update identifiers are names of policy updates. Syntax is similar
+      to that of entity identifers.
+
+      [a-z][a-zA-Z0-9_]{0,127}
+
+    1.1.3 Variable Identifiers
+
+      Placeholders for entities. Variables are typed. As such, variable
+      identifiers must indicate its type by the first two characters. Each
+      variable identifier must begin with one of the following:
+
+      - SS - Subject (Single)
+      - SG - Subject (Group)
+      - AS - Access Right (Single)
+      - AG - Access Right (Group)
+      - OS - Object (Single)
+      - OG - Object (Group)
+      - S  - Subject (Single + Group)
+      - A  - Access Right (Single + Group)
+      - O  - Object (Single + Group)
+
+      The regular expression for variable identifiers is as follows:
+
+      [SAO][a-zA-Z0-9_]{0,127}
 
   1.2. Facts
 
@@ -36,26 +64,26 @@ Updated 2004 Jan 06
       A single logical fact describing a set containment relationship to
       another set.
 
-        subst(Subject_1, Subject_2)
+        subst(g_subject_1, g_subject_2)
 
       is read as
 
-        "group Subject_1 is contained in group Subject_2"
+        "group g_subject_1 is contained in group g_subject_2"
 
       or
 
-        "group Subject_1 is a subset of group Subject_2"
+        "group g_subject_1 is a subset of group g_subject_2"
 
     1.2.3. Membership Facts
 
       A single logical fact describing the membership of a singular
       subject/access-right/object to a subject/access-right/object group.
 
-        memb(subject_1, Subject_1)
+        memb(subject_1, g_subject_1)
 
       is read as
 
-        "subject_1 is an element of group Subject_1"
+        "subject_1 is an element of group g_subject_1"
 
   1.3. Compound Statements
 
@@ -104,27 +132,20 @@ Updated 2004 Jan 06
 
       Parenthesis is not allowed to be used to enclose facts and expressions.
 
-  1.4. Variables
-
-   Variables are only permitted to occur on policy update proposition
-   statements. They must be in the form:
-
-     [a-zA-Z][a-zA-Z0-9]*
-
 2. Policy Definition Statements
 
-  2.1 Identifier Definition Statements
+  2.1 Entity Identifier Definition Statements
 
-    All identifiers, except those for update and variable identifiers, must
-    be declared first before any proposition and query statements are
-    declared. The following syntax must be used to declare identifiers.
+    All entity identifiers must be declared first before any initial facts,
+    constraints, policy updates or query statements appear. The following
+    syntax must be used to declare entity identifiers.
 
-      ident <type> <identifier>[,<identifier2>[,...]]
+      entity <type> <entity-identifier>[,<entity-identifier2>[,...]]
 
       where:
 
         type is one of the following: sub, acc, obj, sub-grp, acc-grp, obj-grp
-        identifier is [a-zA-Z][a-zA-Z0-9_]{0,127} and is not a reserved word.
+        identifier is [a-z][a-zA-Z0-9_]{0,127} and is not a reserved word.
 
   2.2. Initial State Defintion
 
@@ -133,7 +154,7 @@ Updated 2004 Jan 06
       initially <expression>
 
     Note that <expression> may be a conjuction of many facts. Also, the
-    initially clause may be used more than once.
+    initially statement may be used more than once.
 
   2.3. Policy Update Definition Statement
 
@@ -156,9 +177,9 @@ Updated 2004 Jan 06
 
     Note that an update definition statement may have variables:
 
-      delete_write(vSUBJECT, vOBJECT)
-      causes !holds(vSUBJECT, a_write, vOBJECT)
-      if holds(vSUBJECT, a_write, vOBJECT)
+      delete_write(SS1, OS1)
+      causes !holds(SS1, a_write, OS1)
+      if holds(SS1, a_write, OS1)
 
     this means
 
@@ -286,7 +307,7 @@ Updated 2004 Jan 06
     - always
     - causes
     - if
-    - ident
+    - entity
     - sub-grp
     - obj-grp
     - acc-grp
